# gt-validation

./: README.md  conftest.py  properdocs.yml  pyproject.toml  ruff_fixes.diff  ruff_output.txt  runtime_detector.py
.envoy/: python_env.json
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  deploy-docs.yml  lint.yml
docs/: SUMMARY.md  context-aware-rules.md  gen_ref_pages.py  index.md
envoy_env/: commands.json  validation_env.json
py/gt/validator/: __init__.py  _version.py  allowlist.py  cli.py  config.py  context_factory.py  env.py  errors.py  registry.py  runner.py
py/gt/validator/context/: __init__.py  base.py  blender.py  filesystem.py  houdini.py  krita.py  max.py  maya.py  unreal.py
py/gt/validator/entry_points/: __init__.py  _dispatch.py  run_validation.py
py/gt/validator/entry_points/unreal/: run_validation.py
py/gt/validator/reporters/: __init__.py  json_reporter.py
py/gt/validator/reporting/: __init__.py  formatters.py  models.py
py/gt/validator/rules/: __init__.py  anim_sequence.py  base.py  bounding_box.py  collision_profile.py  filesystem.py  lod.py  material.py  naming.py  niagara.py  overdraw.py  skeletal_mesh.py  skeletal_mesh_test.py  static_mesh.py  test_context_aware_rules.py  test_host_type_detection.py  texture.py
py/gt/validator/rules/tests/: test_context_aware_rules.py  (+4 more)
resource/sample_content/: SAMPLE_CONTENT_ALIGNMENT.md
resource/sample_content/filesystem_pack/: DEMO_MANIFEST.md
resource/sample_content/filesystem_pack/notes/: filesystem_pack_plan.md  instructor_demo_guidance.md  rule_targets_map.md
resource/sample_content/filesystem_pack/tools/: generate_filesystem_pack.py
resource/sample_content/production_mock_pack/: DEMO_MANIFEST.md  README.md
resource/sample_content/production_mock_pack/tools/: generate_production_mock_pack.py
(+38 files in other folders)
